remove the exposed form from the views template and inject the dom ID ajax needs

--- a/templates/eva-display-entity-view.html.twig
+++ b/templates/eva-display-entity-view.html.twig
@@ -1,7 +1,11 @@
 {#
 /**
  * @file
- * Default theme implementation for main view template.
+ * eva theme implementation for main view template.
+ * 
+ * the main difference between this and the canonical template
+ * is the exposed form is removed (because it is displayed as
+ * a separate field)
  *
  * Available variables:
  * - attributes: Remaining HTML attributes for the element.
@@ -50,7 +54,6 @@
     </header>
   {% endif %}
 
-  {{ exposed }}
   {{ attachment_before }}
 
   {{ rows }}
